--- a/src/qt/forms/commentdialog.ui
+++ b/src/qt/forms/commentdialog.ui
@@ -16,7 +16,7 @@
   <widget class="QPushButton" name="insertButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>30</x>
      <y>140</y>
      <width>171</width>
      <height>31</height>
@@ -49,9 +49,9 @@
   <widget class="QLineEdit" name="addrEdit">
    <property name="geometry">
     <rect>
-     <x>82</x>
-     <y>25</y>
-     <width>451</width>
+     <x>30</x>
+     <y>40</y>
+     <width>491</width>
      <height>20</height>
     </rect>
    </property>
@@ -65,33 +65,33 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>27</x>
-     <y>29</y>
-     <width>54</width>
-     <height>12</height>
+     <x>30</x>
+     <y>20</y>
+     <width>111</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Pay to:</string>
+    <string>Pay to Address :</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>27</x>
-     <y>75</y>
-     <width>54</width>
-     <height>12</height>
+     <x>30</x>
+     <y>71</y>
+     <width>171</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Comments</string>
+    <string>Comments (35 Characters) :</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>210</x>
      <y>140</y>
      <width>81</width>
      <height>31</height>
@@ -114,10 +114,10 @@
   <widget class="QLineEdit" name="txtComment">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>70</y>
-     <width>451</width>
-     <height>20</height>
+     <x>30</x>
+     <y>100</y>
+     <width>491</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
