--- a/src/qt/forms/helpmessagedialog.ui
+++ b/src/qt/forms/helpmessagedialog.ui
@@ -34,8 +34,8 @@
      <property name="leftMargin">
       <number>0</number>
      </property>
-     <property name="topMargin">
-      <number>4</number>
+     <property name="pixmap">
+      <pixmap resource="../bitcoin.qrc">:/images/about</pixmap>
      </property>
      <property name="rightMargin">
       <number>0</number>
@@ -128,8 +128,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>635</width>
-          <height>137</height>
+          <width>748</width>
+          <height>276</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
