--- a/src/qt/forms/multisigdialog.ui
+++ b/src/qt/forms/multisigdialog.ui
@@ -100,7 +100,7 @@
              </font>
             </property>
             <property name="text">
-             <string>Total balance:</string>
+             <string>Total Balance:</string>
             </property>
            </widget>
           </item>
@@ -625,8 +625,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>834</width>
-        <height>78</height>
+        <width>824</width>
+        <height>99</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
