--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -72,7 +72,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string notr="true">0.9.3.2-Core</string>
+          <string notr="true">0.9.6.1</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
@@ -100,7 +100,7 @@
         <cursorShape>IBeamCursor</cursorShape>
        </property>
        <property name="text">
-        <string notr="true">Copyright &amp;copy; 2013-2016  The Feathercoin Core developers</string>
+        <string notr="true">Copyright &amp;copy; 2013-2017  The Feathercoin Core developers</string>
        </property>
        <property name="textFormat">
         <enum>Qt::RichText</enum>
