--- a/src/qt/feathercoin.qrc
+++ b/src/qt/feathercoin.qrc
@@ -49,6 +49,10 @@
         <file alias="sx">res/icons/sx.png</file>
         <file alias="snap">res/icons/snap.png</file>
         <file alias="open">res/icons/open.png</file>
+        <file alias="verify">res/icons/verify.png</file>
+        <file alias="info">res/icons/info.png</file>
+        <file alias="about">res/icons/about.png</file>
+        <file>res/icons/about_qt.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
