Display the Splash background, insteat of Bitcoin Icon, update  icons  / images and resource file

--- a/src/qt/feathercoin.qrc
+++ b/src/qt/feathercoin.qrc
@@ -58,8 +58,8 @@
         <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash.png</file>
         <file alias="splash_testnet">res/images/splash_testnet.png</file>
-        <file alias="mainlogo">res/images/LOGO.png</file>
         <file alias="paper_wallet">res/images/paper_wallet.png</file>
+        <file alias="mainlogo">res/images/logo.png</file>
     </qresource>
     <qresource prefix="/movies">
         <file alias="spinner-000">res/movies/spinner-000.png</file>
