--- a/src/qt/feathercoin.qrc
+++ b/src/qt/feathercoin.qrc
@@ -3,7 +3,7 @@
         <file alias="coinnector">res/icons/coinnector.png</file>
         <file alias="multisig">res/icons/multisig.png</file>
         <file alias="openname">res/icons/openname.png</file>
-        <file alias="bitcoin">res/icons/bitcoin.png</file>
+        <file alias="bitcoin">res/icons/feathercoin.png</file>
         <file alias="bitmessage">res/icons/bitmessage.png</file>
         <file alias="shapeshift">res/icons/shapeshift.png</file>
         <file alias="openurl">res/icons/openurl.png</file>
